Updated view on different resolution and squashed some visual bugs

--- a/src/components/navBar/style.css
+++ b/src/components/navBar/style.css
@@ -1,7 +1,7 @@
 .nav-link {
-  font-size: 32px;
+  font-size: 1.2em;
 }
 
 .nav-item {
-  padding: 20px;
+  padding: 0.7em;
 }
